Added Movie Details view with movie details

--- a/MovieDB/MovieDB/Utilities/Localizable.strings
+++ b/MovieDB/MovieDB/Utilities/Localizable.strings
@@ -8,3 +8,7 @@
 
 // MoviesList Screen
 "MoviesList.Title" = "Movies";
+
+// MovieDetails Screen
+"MovieDetails.ReleaseDate" = "Release Date";
+"MovieDetails.Rating" = "Rating";
